fix: search improvements + z-index fix

--- a/apps/frontend/src/styles/setup/_variables.scss
+++ b/apps/frontend/src/styles/setup/_variables.scss
@@ -28,7 +28,7 @@ $layout-gutter-mobile:  20px;
 $layout-gutter-desktop: 128px;
 
 // z-index stack
-$z-header:          100;
+$z-header:         1005;
 $z-filter-overlay:   20;
 $z-filter-dropdown: 1000;
 $z-panel-backdrop:  1050;
